# StupidVNC

./: CMakeLists.txt  README.md  lsdtest.cpp  stupidvnc.cpp  stupidvnc.h  types.h  ws.cpp  ws.h  x11stupidvnc.cpp
